# Advanced-Information-Retrieval-

./: .gitignore  README.bakk.md  README.md  eval.py  helix.toml  insert_data.py  main.py  preprocess.py  pyproject.toml  queries.rs  requirements.txt  run.py  run_evaluation.py  scraper.py  self_eval.py
datasets/scrapes/scrape_LangChain/: post_1pjtc8n.txt  post_1pk29ee.txt  post_1pk3sl1.txt  post_1pk5ll9.txt  post_1pkikoy.txt  post_1pkw2si.txt  post_1pl8ll2.txt  post_1plbbmu.txt  post_1pleeoz.txt  post_1plhyvi.txt  post_1pm5n74.txt  post_1pmassl.txt  post_1pmiigi.txt  post_1pn2cq1.txt  post_1pn4pw5.txt  post_1pnos8a.txt  post_1pnz1lm.txt  post_1pnzzcw.txt  post_1po3asy.txt  post_1po3ood.txt  post_1pob9m8.txt  post_1poduex.txt  post_1posj5m.txt  post_1povxh8.txt  post_1poxh6j.txt  post_1poyvo4.txt  post_1ppoycu.txt  post_1pprip6.txt  post_1ppy5qh.txt  post_1pq1m53.txt  post_1pqh5jp.txt  post_1pqlce1.txt  post_1pqmk24.txt  post_1pr6rfc.txt  post_1pr7thf.txt  post_1prmdem.txt  post_1prx83x.txt  post_1psdndx.txt  post_1psi2qz.txt  post_1pt4y4m.txt  (+48 more)
datasets/scrapes/scrape_MachineLearning/: post_1pjxs4c.txt  post_1pk6844.txt  post_1pkhblb.txt  post_1pklrqa.txt  post_1pkrc6c.txt  post_1pkuoay.txt  post_1plg1gs.txt  post_1plwkqz.txt  post_1plzkzu.txt  post_1pm2zsb.txt  post_1pmd5ul.txt  post_1pmd9n2.txt  post_1pmr2kh.txt  post_1pmzhef.txt  post_1pnc441.txt  post_1pnm0r0.txt  post_1po2m4m.txt  post_1po2yut.txt  post_1po43p3.txt  post_1pojm5n.txt  post_1popuf4.txt  post_1poy0pn.txt  post_1pp2pz4.txt  post_1pp4eca.txt  post_1ppmajk.txt  post_1ppuf3v.txt  (+67 more)
db/: queries.hx  schema.hx
(+1699 files in other folders)
