[project]
name = "Advanced Information Retrieval"
version = "0.1.0"
description = "A Reddit sub-reddits search engine using vector similarity search and retrieval augmented generation with small open source GPT LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "helix-py>=0.2.31",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "requests>=2.32.5",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
